# stock-bot

./: .gitignore  CLAUDE.md  CLI.md  CLI.py  Consolidation_Breakout_Plan.md  FRONTEND.md  PLANS.md  README.md  RESEARCH_CLI.md  RSI_Divergence_Plan.md  main.py  pyproject.toml  reproduce_bug.py  research_cli.py  stock_bot.py  test_levels.py
engine/: .dockerignore  .gitignore  Dockerfile  ENGINE_ARCHITECTURE.md  ENGINE_DATAFLOWS.md  README.md  __init__.py  bridge.py  docker-compose.yml  main.py  pyproject.toml
engine/core/: backtester.py  bundler.py  config.py  controller.py  exceptions.py  gui_launcher.py  logger.py  metrics.py  portfolio_backtester.py  trainer.py  universes.py  workspace.py
engine/core/analytics/: __init__.py  conditional_ic.py  ic_analyzer.py  macro_fetcher.py  report.py
engine/core/data_broker/: __init__.py  data_broker.py  database.py  fetcher.py  insider_db.py  insider_fetcher.py
engine/core/diagnostics/: dsr.py  trial_counter.py
engine/core/features/: README.md  __init__.py  base.py  features.py  output_types.md
engine/core/features/alternative/: google_trends.py  insider_flow.py
engine/core/features/calendar/: weekly_cycle.py  yearly_cycle.py
engine/core/features/levels/: fibonacci.py  kde.py  (+1 more)
engine/core/ml_bridge/: __init__.py  artifact_manager.py  inference.py  orchestrator.py  target_builder.py
engine/core/optimization/: cpcv_splitter.py  local_cache.py  optimizer_core.py
engine/core/regime/: __init__.py  base.py  bocpd.py  hmm.py  orchestrator.py  rule_based.py
engine/core/templates/: context.py.j2  model.py.j2
engine/daemon/: main.py  models.py  tasks.py  worker.py
engine/strategies/: README.md
engine/strategies/rsi_divergence/: context.py  model.py
engine/strategies/test_strategy/: context.py  model.py
engine/tests/: conftest.py
engine/tests/engine/: test_backtester.py  test_bundler.py  test_controller.py  test_cpcv_logic.py  test_data_fetcher.py  test_local_backtester.py  test_lookahead_bias.py  test_metrics.py  test_optimizer_routing.py  test_signal_validator.py  test_workspace.py  test_workspace_flow.py
engine/tests/features/: test_feature_caching.py  test_feature_memory_violation.py  test_feature_orchestrator.py  test_feature_registry.py
engine/tests/integration/: test_api.py  test_daemon.py
engine/tests/worker/: test_tasks.py
(+145 files in other folders)
