[project]
name = "stock-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "html5lib>=1.1",
    "lxml>=6.0.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
    "tqdm>=4.67.3",
    "xlrd>=2.0.2",
    "yfinance>=1.1.0",
]
