[project]
name = "stock-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "model-engine",
    "pandas>=3.0.0",
    "pyinstrument>=5.1.2",
    "pyqt6>=6.10.2",
    "pyqtgraph>=0.14.0",
    "pytrends>=4.9.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "xgboost>=3.2.0",
]

[tool.uv.sources]
model-engine = { path = "./engine", editable = true }
