[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["engine*"]

[project]
name = "model-engine"
version = "0.1.0"
description = "Financial strategy backtesting and optimization engine"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fakeredis>=2.34.1",
    "fastapi[standard]>=0.135.2",
    "hmmlearn>=0.3.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "joblib>=1.5.3",
    "numpy>=2.4.3",
    "optuna>=4.8.0",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "redis>=7.4.0",
    "requests>=2.32.5",
    "requests-cache>=1.3.1",
    "rq>=2.7.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "setuptools>=82.0.1",
    "sqlalchemy>=2.0.48",
    "tenacity>=9.1.4",
    "uvicorn>=0.42.0",
    "yfinance>=1.2.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
